@@ -7,7 +7,6 @@
   * v1.4.1 Release Candidate 2
 
 
-
 2003-11-12  Jens Tkotz <jens@peino.de> 1.4.1-RC3
 
   * Sync with 1.4.1-RC3
@@ -29,7 +28,6 @@
 2003-11-21 jact <jachavar@terra.es> 1.4.1
 
   * Update
-
 
 
 2003-11-27  Jens Tkotz <jens@peino.de> 1.4.1
