@@ -1,3 +1,8 @@
+2004-04-10 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b10
+
+	* Bugfix: When Gallery runs on PHP >=4.3.0 slideshow for modern Browser were broken 
+		  in several languages, due to unsupported Charset in html_entity_decode().
+
 2004-04-04 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b9
 
 	* Bugfix: $GLOBALS['user_prefix'] was not used when embedded in phpnuke or nsnnuke.
